--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -6,6 +6,7 @@
     <div class="card">
       <div class="card-body  bg-main">
         This is some text within a card body.
+        <p *ngIf="isLoggedIn">test coba </p>
       </div>
     </div>
 
