--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -8,7 +8,7 @@
 
         <mdb-card>
           <mdb-card-body>
-
+            <form (ngSubmit)="formSubmit($event)">
             <!--input 1-->
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Tanggal Valuta</label>
@@ -53,7 +53,7 @@
                 <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <div class="col-3 "> 
-                    <input mdbInput mdbValidate currencyMask name="input" type="text" class="form-control" [(ngModel)]="required" #inputNilai="ngModel" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}" required>
+                    <input mdbInput mdbValidate currencyMask name="inputNilai" id="nilaiTransaksi" type="text" class="form-control" [(ngModel)]="required" #inputNilai="ngModel" [options]="{ prefix: 'Rp ', thousands: '.', precision: 0}" required>
                 </div>
                 <span class="col-6 mt-2">
                   <p class="text-danger"  *ngIf="inputNilai.invalid && (inputNilai.dirty || inputNilai.touched)">Mohon
@@ -94,12 +94,12 @@
             <!--input 7-->
             <div class="d-flex justify-content-center">
                 <button mdbBtn color="default" class="waves-light" mdbWavesEffect *ngIf="inputNilai.invalid || inputRekening.invalid" disabled><i class="fa fa-refresh"></i> Proses</button>
-                <button mdbBtn color="default" class="waves-light" mdbWavesEffect *ngIf="inputNilai.valid && inputRekening.valid" data-toggle="modal" data-target="#basicExample"
-                (click)="frame.show()"><i class="fa fa-refresh" ></i> Proses</button>
+                <button mdbBtn type="submit" color="default" class="waves-light" mdbWavesEffect *ngIf="inputNilai.valid && inputRekening.valid" ><i class="fa fa-refresh" ></i> Proses</button>
                 <button type="button btn-md" mdbBtn color="primary" [routerLink]="['/']" routerLinkActive="router-link-active"  mdbWavesEffect>
                   <i class="fa fa-angle-left"></i> Kembali
                 </button>
             </div>
+          </form>
           </mdb-card-body>
         </mdb-card>
 
@@ -144,3 +144,5 @@
     </div>
   </div>
 </div>
+
+
