--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div style="margin: 20px; margin-top: 210px;">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
@@ -29,12 +29,12 @@
                   <td><strong>034 - Cabang Utama</strong></td>
                 </tr>
                 <tr>
-                    <td colspan="3"></td>
-                    <td></td>
-                    <td class="font-weight-bold">Kode Departemen</td>
-                    <td>:</td>
-                    <td><strong>DC - Data Center</strong></td>
-                  </tr>
+                  <td colspan="3"></td>
+                  <td></td>
+                  <td class="font-weight-bold">Kode Departemen</td>
+                  <td>:</td>
+                  <td><strong>DC - Data Center</strong></td>
+                </tr>
               </table>
             </div>
           </div>
@@ -54,17 +54,17 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td  class="font-weight-normal">Jateng SP</td>
-                    <td  class="font-weight-normal">Jateng SP</td>
-                    <td  class="font-weight-normal">{{tanggal | date:'short'}}</td>
-                    <td  class="font-weight-normal"><a>Invalidate</a></td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">{{tanggal | date:'short'}}</td>
+                    <td class="font-weight-normal"><a>Invalidate</a></td>
                   </tr>
                   <tr>
-                      <td  class="font-weight-normal">Jateng SP</td>
-                      <td  class="font-weight-normal">Jateng SP</td>
-                      <td  class="font-weight-normal">{{tanggal | date:'short'}}</td>
-                      <td  class="font-weight-normal"><a>Invalidate</a></td>
-                    </tr>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">Jateng SP</td>
+                    <td class="font-weight-normal">{{tanggal | date:'short'}}</td>
+                    <td class="font-weight-normal"><a>Invalidate</a></td>
+                  </tr>
                 </tbody>
               </table>
             </div>
