--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div style="margin: 20px;">
+<div style="margin: 210px;">
   <!-- Start your project here-->
   <div class="d-flex flex-column h-100">
     <div id="outer" class="d-flex flex-column flex-grow">
@@ -54,19 +54,21 @@
           </div>
 
           <div class="btn-group" mdbDropdown>
-              <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
-                Nasabah
-              </button>
-              <div class="dropdown-menu dropdown-primary">
-                  <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru - Corporate</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabahindvl']">Duplikat Cek Nasabah Baru - Individual</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasaba Baru - Corporate</a>
-                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasaba Baru - Individual</a>
-              </div>
+            <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
+              Nasabah
+            </button>
+            <div class="dropdown-menu dropdown-primary">
+              <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabah']">Duplikat Cek Nasabah Baru -
+                Corporate</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/duplikatnasabahindvl']">Duplikat Cek Nasabah Baru -
+                Individual</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahcorporate']">Buat Nasaba Baru - Corporate</a>
+              <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahindividual']">Buat Nasaba Baru - Individual</a>
             </div>
+          </div>
 
           <div class="btn-group" mdbDropdown>
             <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
